// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CarNumber желтый номер 1`] = `
<div
  className="CarNumber CarNumber_yellow"
>
  <div
    className="CarNumber__col CarNumber__col_number"
  >
    яя 000
  </div>
  <div
    className="CarNumber__col"
  >
    99
  </div>
</div>
`;

exports[`CarNumber ни обычный, ни желтый номер 1`] = `
<div
  className="CarNumber"
>
  <div
    className="CarNumber__col"
  >
    not-valid
  </div>
</div>
`;

exports[`CarNumber обычный номер 1`] = `
<div
  className="CarNumber"
>
  <div
    className="CarNumber__col CarNumber__col_number"
  >
    я 000 ьь
  </div>
  <div
    className="CarNumber__col"
  >
    99
  </div>
</div>
`;
